[package]
name = "ripissue"
version = "0.1.0"
edition = "2021"
about = "this is cargo about"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
anyhow = "1.0.75"
slugify = "0.1.0"
walkdir = "2.4.0"
git2 = "0.18.0"
strum = "0.25.0"
strum_macros = "0.25.2"

[[bin]]
name = "ripi"
path = "src/main.rs"
