[package]
name = "ripissue"
version = "0.1.5"
edition = "2021"
description = "CLI tool written in Rust for distributed bug / issue / story tracking with the filesystem and git."
license-file = "LICENSE"
# homepage = "https://github.com/cwnt-io/ripissue"
repository = "https://github.com/cwnt-io/ripissue"
keywords = ["issue", "tracker", "git", "project", "management"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
authors = ["cwnt.io", "Gustavo Basso <gubasso@cwnt.io>", "Ismael Pamplona <isma@cwnt.io>"]

[package.metadata.release]
allow-branch = ["master","staging", "develop"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
anyhow = "1.0.75"
slugify = "0.1.0"
walkdir = "2.4.0"
strum = "0.25.0"
strum_macros = "0.25.2"
chrono = "0.4.31"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
cmd_lib = "1.3.0"
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1.38.0", features = ["full"] }
dotenv = "0.15.0"

[[bin]]
name = "ripi"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.10.1"
assert_cmd = "2.0.14"
mockito = "1.4.0"
